--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>My First Website Project</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-<h1>My First Website Projects starts</h1>
+<h1>Welcome to</h1>
+<h1> <span class="name-highlighter">Peter Parker</span> World</h1>
 </body>
 </html>
