--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My First Website Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 
 </head>
 <body>
 <h1>Welcome to</h1>
 <h1> <span class="name-highlighter">Peter Parker</span> World</h1>
+<h3>Build Climber and Train Stopper</h3>
+<p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+
+    <img src="images/jhankar.png" alt="">
+
 </body>
 </html>
