--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 
 </head>
 <body>
-<h1>Welcome to</h1>
-<h1> <span class="name-highlighter">Peter Parker</span> World</h1>
-<h3>Build Climber and Train Stopper</h3>
-<p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+<section>
+    <div class="half-width">
+        <h1>Welcome to</h1>
+        <h1> <span class="name-highlighter">Peter Parker</span> World</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+    </div>
 
-    <img src="images/jhankar.png" alt="">
+    <div class="half-width">
+        <img src="images/jhankar.png" alt="">
+    </div>
+</section>
 
 </body>
 </html>
