--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <h1>Welcome to</h1>
         <h1> <span class="name-highlighter">Peter Parker</span> World</h1>
         <h3>Build Climber and Train Stopper</h3>
-        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+
+        <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> HIRE ME </a>
+
     </div>
+
 
     <div class="half-width">
         <img src="images/jhankar.png" alt="">
