--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
 
         <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> HIRE ME </a>
+        <a class="link-button" href="https://smgrgroup.github.io/Project1/index">My Project</a>
 
     </div>
 
