--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
 
-        <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> HIRE ME </a>
+        <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> HIRE ME </a>  &nbsp;
         <a class="link-button" href="https://smgrgroup.github.io/Project1/index">My Project</a>
 
     </div>
@@ -25,6 +25,26 @@
     <div class="half-width">
         <img src="images/jhankar.png" alt="">
     </div>
+</section>
+
+
+<! button 2nd chapter
+
+
+<section class="dream-project">
+
+    <div class="half-width">
+        <img src="images/jhankar2.png" alt="">        
+    </div>
+
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My                goal is to build 3 websites and learn advanced topics.</p>
+        <a class="link-button" target="_blank" href="https://www.prothomalo.com">Download Area</a>
+    </div>
+
+
 </section>
 
 </body>
