--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </section>
 
 
-<! button 2nd chapter
+<! button 2nd chapter>
 
 
 <section class="dream-project">
 
     <div class="half-width">
-        <img src="images/jhankar2.png" alt="">        
+        <img src="images/jhankar2.png" alt="">
     </div>
 
     <div class="half-width">
@@ -44,6 +44,28 @@
         <a class="link-button" target="_blank" href="https://www.prothomalo.com">Download Area</a>
     </div>
 
+
+</section>
+
+<! Chapter 3 - Buttom Chapter Making >
+
+<section class="bottom-chapter">
+    <h2>Experience</h2>
+    <div class="half-width">
+        <h2>Full Stack Web Developer </h2>
+        <h3 class="name-highlighter">2021-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+        </p>
+
+    </div>
+
+    <div class="half-width">
+        <h2>Baby Web Developer</h2>
+        <h3 class="name-highlighter">2020-2021 | Programming Hero Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+        </p>
+
+    </div>
 
 </section>
 
