--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
 
-        <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> HIRE ME </a>  &nbsp;
+        <a class="link-button" href="https://programminghero1.github.io/developer-portfolio/"> Original Project </a>  &nbsp;
         <a class="link-button" href="https://smgrgroup.github.io/Project1/index">My Project</a>
 
     </div>
